# multi-agent-claude

./: .gitignore  HOW_TO_RUN.md  LICENSE  PROJECT_SELF_IMPROVEMENT_GUIDE.md  README.md  launch_system.py  launch_system_with_test.py  mcp_multiagent.db  mcp_multiagent_backup.db  pyproject.toml  requirements.txt  setup.py
backend/: database.py  main.py  mcp_multiagent.db  models.py  schemas.py  simple_main.py
backend/services/: advanced_orchestrator.py  claude_cli_augmented_llm.py  execution_engine.py  execution_engine_backup.py  simple_execution_engine.py
config/: claude_code_mcp.json  mcp_agent_servers.json
config/agents/: active_inference_expert_claude_config.json  launch_active_inference_expert.sh  launch_mechanistic_interpretability_expert.sh  launch_orchestrator.sh  launch_python_expert.sh  launch_software_architect.sh  launch_tech_lead.sh  mechanistic_interpretability_expert_claude_config.json  orchestrator_claude_config.json  python_expert_claude_config.json  software_architect_claude_config.json  tech_lead_claude_config.json
docs/: ARCHITECTURE_SIMPLE.md  SYSTEM_ARCHITECTURE.md
examples/: agents.json  development_agents.json
examples/reporter/: WORKFLOW_SETUP_INSTRUCTIONS.md  agent1_info_gatherer.json  agent2_report_writer.json  claude_code_comprehensive_guide.md  claude_code_comprehensive_report.html  setup_workflow.py  task1_gather_claude_info.json  task2_create_claude_report.json  topology_system_report.html  workflow_pattern.json
examples/topology_visualization_workflow/: README.md  demo.py  examples.py  interactive_controls.py  requirements.txt  setup_and_run.py  step2_objective_analysis.txt  step3_configure_create.txt  test.txt  topology_visualization_workflow_pattern.json  topology_visualizer.py
examples/topology_visualization_workflow/agents/: documentation_specialist.json  python_developer.json  topology_mathematician.json  visualization_architect.json
examples/topology_visualization_workflow/outputs/: educational_documentation.md  learning_activities.md  quick_reference.md  user_guide.md
examples/topology_visualization_workflow/tasks/: concept_selection_and_analysis.json  educational_documentation_creation.json  integration_testing_and_optimization.json  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
mcp_a2a/: __init__.py  cli.py  config.py  conversation_engine.py  core.py  dynamic_config.py  memory.py  sdk_agent.py
project_selfdevelop/: development_agents.json  development_tasks.json
scripts/: README.md  demo_frontend_controls.py  execute_with_available_agent.py  execute_workflow.py  final_monitoring_report.py  launch_system_old.py  test_full_frontend_functionality.py  test_real_workflow.py
tests/: conftest.py  pytest.ini  requirements-test.txt  run_all_tests.py  run_tests.py
tests/backend/: test_agent_deletion.py  test_api.py  test_execution_controls.py  test_execution_engine.py  test_models.py
tests/frontend/: test_components.py  test_dashboard_controls.py
tests/integration/: test_control_features.py  test_full_workflow.py
tests/unit/: test_claude_code_sdk.py
(+14 files in other folders)
